=== 0.0.0 ===
2008-04-15  Pascal Volk  <neverseen@users.sourceforge.net>

	* VirtualMailManager/Account.py (Account.modify()): 
	* vmm (main): Added code for modify user's transport
	* VirtualMailManager/VirtualMailManager.py: Implemented
	VirtualMailManager.user_transport()

2008-04-14  Pascal Volk  <neverseen@users.sourceforge.net>

	* VirtualMailManager/VirtualMailManager.py: Implemented:
	VirtualMailManager.__getSalt(), VirtualMailManager.__pwCrypt(),
	VirtualMailManager.__pwSHA1(), VirtualMailManager.__pwMD5() and
	VirtualMailManager.__pwMD4()
	updated VirtualMailManager.__pwhash()
	* VirtualMailManager/constants/VERSION.py: Set Version to 0.4-dev
	* INSTALL: Added hint for python-crypto, fixed user_query


2008-04-10  Pascal Volk  <neverseen@users.sourceforge.net>

	* update_tables_0.3.x-0.4.py: Replaced view dovecot_user
	* create_tables.pgsql (VIEW: dovecot_user): Added extra field mail
	* UPGRADE: fixed filename, hint for view permissions and user_query
	* INSTALL: Replaced mail_extra_groups with mail_privileged_group, updated
	user_query

2008-04-06  Pascal Volk  <neverseen@users.sourceforge.net>

	* install.sh: Removed $PF_GID
	* INSTALL: Added hints for pyPgSQL and smtpd_recipient_restrictions
	* update_config_0.3.x-0.4.py:
	* upgrade.sh:
	* UPGRADE: Added to repository
	* VirtualMailManager/VirtualMailManager.py (VirtualMailManager.__init__):
	Don't call VirtualMailManager.__chkenv() if vmm is started with
	option configure.
	* VirtualMailManager/VirtualMailManager.py (VirtualMailManager.__chkenv):
	Added value for placeholder in error message.

2008-03-05  Pascal Volk  <neverseen@users.sourceforge.net>

	* create_tables.pgsql: Removed unneeded newlines from views dovecot_user and
	postfix_uid
	* update_tables_0.2.x-0.3.pgsql: Removed from repository
	* update_tables_0.3.x-0.4.py: Added to repository

2008-03-04  Pascal Volk	 <neverseen@users.sourceforge.net>

	* VirtualMailManager/Alias.py:
	* VirtualMailManager/VirtualMailManager.py: